# csv-plus-plus

./: .env.sample  .gitignore  .rspec  .rubocop.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gemfile  IDEAS.md  LANGUAGE_GUIDE.md  LICENSE.txt  Makefile  README.md  Rakefile  TODO.md  csv-plus-plus.gemspec  csv_plus_plus.gemspec  dist-workspace.toml
.github/workflows/: release.yml  rspec.yml  rubocop.yml  rust.yml
benches/: eval_fill.rs  expensive_fill.rs
book/: Makefile  book.toml
book/src/: README.md  SUMMARY.md  cli.md  coding_conventions.md  common_patterns.md  installation.md  why_rust.md
csvp/: Cargo.toml  LICENSE.txt  Makefile  README.md
csvp/src/: cell.rs  config.rs  error.rs  field.rs  field_builder.rs  lib.rs  parser.rs  partial_field.rs  source_position.rs
csvpp/: Cargo.toml  README.md  foo.csvpp
csvpp/src/: ast.rs  builtins.rs  cli_args.rs  compiler.rs  error.rs  expand.rs  init.rs  lib.rs  main.rs  modifier.rs  options.rs  output_target.rs  position.rs  rgb.rs  runtime.rs  source_code.rs
csvpp/src/a1/: a1.rs  a1_builder.rs  mod.rs  position.rs  range_or_cell.rs
csvpp/src/ast/: boolean.rs  builtin_function.rs  builtin_variable.rs  date_time.rs  display.rs  eval.rs  float.rs  from.rs  from_str.rs  function.rs  function_call.rs  infix_function_call.rs  integer.rs  mod.rs  node.rs  reference.rs  references.rs  runtime_value.rs  text.rs  variable.rs
csvpp/src/compiler/: ast_lexer.rs  ast_parser.rs  code.rs  code_section.rs  code_section_parser.rs  csv_section.rs  mod.rs  modifier.rs  modifier_lexer.rs  modifier_parser.rs  spreadsheet.rs  spreadsheet_cell.rs  template.rs  token_library.rs
csvpp/src/error/: display.rs  error.rs  inner_error.rs  mod.rs
csvpp/src/modifier/: border_side.rs  border_style.rs  expand.rs  horizontal_align.rs  mod.rs  number_format.rs  text_format.rs  vertical_align.rs
csvpp/tests/: all_features.rs  all_features_test.rs  csv.rs  csv_test.rs  error_messages.rs
csvpp/tests/common/: mod.rs
docs/: BUGS.md  CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  INSTALL.md  LANGUAGE_REFERENCE.md  README_GOOGLE_SHEETS.md  RELEASE_CHECKLIST.md  SECURITY.md  feature_matrix.csvpp
examples/: all_features.csv  all_features.csvpp  all_features.xlsx  loan.csvpp  loan.numbers  stocks.csv  stocks.csvpp
examples/all_features/: all_features.csvpp  all_features.xlsx
examples/crypto_wallet/: crypto_wallet.csvpp
examples/loan/: loan.xlsx
examples/stocks/: stocks.csvpp
fixtures/: all_features.csvpp  all_features_shorthand.csvpp
lib/: ast.rb  cell.rb  cell_value.tab.rb  cell_value_parser.tab.rb  code_section.rb  code_section.tab.rb  code_section_parser.tab.rb  color.rb  csv_plus_plus.rb  csv_template.rb  csvpp.rb  expand.rb  function.rb  google_sheet.rb  graph.rb  gspush.rb  lexer.rb  modifier.rb  modifier.tab.rb  options.rb  row.rb  spreadsheet.rb  syntax_error.rb  template.rb
lib/csv_plus_plus/: a1_reference.rb  benchmarked_compiler.rb  can_define_references.rb  can_resolve_references.rb  cell.rb  cli.rb  cli_flag.rb  code_section.rb  color.rb  compiler.rb  data_validation.rb  entities.rb  error.rb  error_formatter.rb  expand.rb  google_api_client.rb  google_options.rb  graph.rb  lexer.rb  modifier.rb  modifier.tab.rb  options.rb  reader.rb  references.rb  row.rb  runtime.rb  scope.rb  source_code.rb  template.rb  validated_modifier.rb  version.rb  writer.rb
lib/language/: ast.rb  cell_value.tab.rb  code_section.tab.rb  compiler.rb  entities.rb  execution_context.rb  global_scope.rb  references.rb  runtime.rb  scope.rb  syntax_error.rb
lib/lexer/: lexer.rb  tokenizer.rb
lib/writer/: base_writer.rb  csv.rb  excel.rb  google_sheet_builder.rb  google_sheets.rb  open_document.rb  writer.rb
parsers/: cell_value.y  code_section.y  modifier.tab.rb  modifier.y
playground/: .env.example  Makefile  all_features.csv  all_features.csvpp  all_features_shorthand.csv  all_features_shorthand.csvpp  debugxlsx  test.csv  test.csvpp  test.xlsx
playground/benches/: eval_fill.csvpo  eval_fill.csvpp
playground/module_loader/: Makefile  file1.csvpp  file2.csvpp  main.csv  main.csvpp  main.xlsx  sheet_a.csvpp  sheet_b.csvpp
racc/: cell_value_parser.y  code_section_parser.y
release/: Makefile
sorbet/rbi/: todo.rbi
sorbet/tapioca/: require.rb
spec/: ast_spec.rb  cell_spec.rb  cell_value_parser_spec.rb  code_section_parser_spec.rb  code_section_spec.rb  csv_plus_plus_spec.rb  csvpp_spec.rb  expand_spec.rb  google_options_spec.rb  google_sheet_spec.rb  graph_spec.rb  modifier_parser_spec.rb  modifier_spec.rb  options_spec.rb  row_spec.rb  spec_helper.rb  spreadsheet_spec.rb  syntax_error_spec.rb  template_spec.rb
spec/csv_plus_plus/: a1_reference_spec.rb  benchmarked_compiler_spec.rb  can_define_references_spec.rb  cell_spec.rb  cli_flag_spec.rb  cli_spec.rb  code_section_spec.rb  color_spec.rb  compiler_spec.rb  data_validation_spec.rb  error_formatter_spec.rb  expand_spec.rb  google_api_client_spec.rb  google_options_spec.rb  graph_spec.rb  lexer_spec.rb  modifier_parser_spec.rb  modifier_spec.rb  options_spec.rb  references_spec.rb  row_spec.rb  runtime_spec.rb  scope_spec.rb  source_code_spec.rb  template_spec.rb  validated_modifier_spec.rb  writer_spec.rb
spec/factories/: a1_reference.rb  boolean.rb  cell.rb  cell_reference.rb  code_section.rb  compiler.rb  date.rb  entities.rb  execution_context.rb  expand.rb  file_options.rb  function.rb  function_call.rb  google_options.rb  google_sheets_options.rb  modifier.rb  number.rb  options.rb  position.rb  reference.rb  row.rb  runtime.rb  runtime_value.rb  scope.rb  source_code.rb  string.rb  template.rb  variable.rb
spec/language/: cell_value_parser_spec.rb  code_section_parser_spec.rb  compiler_spec.rb  entities_spec.rb  global_scope_spec.rb  references_spec.rb  (+3 more)
src/: border_side.rs  border_style.rs  cli_args.rs  data_validation.rs  horizontal_align.rs  lib.rs  logger.rs  main.rs  number_format.rs  output.rs  rgb.rs  runtime.rs  source_code.rs  text_format.rs  vertical_align.rs
tests/: all_features.rs  csv.rs  error_messages.rs  module_loading.rs  syntax.rs  variable_scoping.rs
(+376 files in other folders)
