[package]
authors = ["Patrick Carroll <patrick@patrickomatic.com>"]
description = "Compile csv++ source code to a target spreadsheet format"
homepage = "https://github.com/patrickomatic/csv-plus-plus"
keywords = ["csv++", "csvpp", "csv", "spreadsheet"]
license = "MIT"
name = "csvpp"
repository = "https://github.com/patrickomatic/csv-plus-plus"
version = "0.6.0"
edition = "2021"

[dependencies]
a1_notation = "0.4.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
colored = "^2.0"
csv = "1"
env_logger = "^0.10"
google-drive3 = "^5.0"
google-sheets4 = "^5.0"
home = "^0.5"
log = "^0.4"
petgraph = "^0.6"
rayon = "^1.8"
regex = "^1.10"
semver = "^1"
serde = { version = "1", features = ["derive", "rc"] }
# TODO: serde_cbor is not maintained (though it seems lots of people use it) - use a different one
serde_cbor = "^0.11"
serde_json = "^1"
tokio = { version = "^1.34", features = ["rt"] }
umya-spreadsheet = "^1.1.1"

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
cross = "^0.2"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
rand = "^0.8"

[[bench]]
name = "eval_fill"
harness = false
