[workspace]
members = ["csvp"]

[workspace.dependencies]
a1 = { version = "1.0.1", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }

[package]
authors = ["Patrick Carroll <patrick@patrickomatic.com>"]
description = "Compile csv++ source code to a target spreadsheet format"
homepage = "https://github.com/patrickomatic/csv-plus-plus"
keywords = ["csv++", "csvpp", "csv", "spreadsheet"]
license = "MIT"
name = "csvpp"
repository = "https://github.com/patrickomatic/csv-plus-plus"
version = "0.8.0"
edition = "2021"

[dependencies]
a1 = { workspace = true }
chrono = { version = "^0.4.31", features = ["serde"] }
clap = { version = "^4", features = ["derive"] }
colored = "^3.1"
csv = "1"
csvp = { version = "^0.2", path = "./csvp" }
env_logger = "^0.11"
google-drive3 = "^7.0"
google-sheets4 = "^7.0"
home = "^0.5"
hyper-rustls = { version = "^0.27", default-features = false, features = ["http1"] }
log = "^0.4"
petgraph = "^0.8"
postcard = { version = "^1.1", features = ["use-std"] }
rayon = "^1.8"
regex = "^1.10"
semver = "^1"
serde = { workspace = true }
serde_json = "^1"
tokio = { version = "^1.35", features = ["rt"] }
umya-spreadsheet = "^2.1"
yup-oauth2 = { version = "^12", default-features = false, features = ["hyper-rustls", "ring", "service-account"] }

[dev-dependencies]
criterion = { version = "^0.8", features = ["html_reports"] }
pprof = { version = "^0.15", features = ["criterion", "flamegraph"] }
rand = "^0.10"

[[bench]]
name = "eval_fill"
harness = false
