[package]
authors = ["Patrick Carroll <patrick@patrickomatic.com>"]
description = "Compile csvpp source code to a target spreadsheet format"
name = "csvpp"
version = "0.1.0"
edition = "2021"

[dependencies]
a1_notation = "0.2.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.7", features = ["derive"] }
csv = "1"
flexbuffers = "2.0.0"
google-sheets4 = "*"
home = "^0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "^1.0", features = ["full"] }
